clean code and validate form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Contact list</title>
     <link rel="shortcut icon" href="contact-list.jpg">
     <!-- font Awesome library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" <!-- main css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" <!-- main
+        css -->
     <link rel=" stylesheet" href="main.css ">
 </head>
 
@@ -19,10 +20,10 @@
         <form action="">
             <i class="fa-solid fa-xmark close"></i>
             <i class="fa-solid fa-user-plus logo"></i>
-            <input type="text" placeholder="Name" id="name">
-            <input type="number" placeholder="Phone" id="phone">
-            <input type="email" placeholder="E-mail" id="email">
-            <input type="text" placeholder="Address" id="address">
+            <input type="text" placeholder="Name" id="name" required>
+            <input type="number" placeholder="Phone" id="phone" required>
+            <input type="email" placeholder="E-mail" id="email" required>
+            <input type="text" placeholder="Address" id="address" required>
             <input type="submit" value="Save" id="save">
         </form>
 
